@@ -52,7 +52,7 @@ from carray.carrayExtension import (
     carray, blosc_version, blosc_set_num_threads)
 from carray.ctable import ctable
 from carray.utils import (
-    detect_number_of_cores, set_num_threads, fromiter)
+    detect_number_of_cores, set_num_threads, fromiter, cparams)
 from carray.version import __version__
 
 
